force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reference_Refresh_Updates1</relationshipName>
    <type>Lookup</type>
</CustomField>