force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Added__c.field-meta.xml
<CustomField>
    <fullName>refedge__Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added</label>
    <type>Checkbox</type>
</CustomField>