force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Attribute__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attribute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attribute</label>
    <type>Checkbox</type>
</CustomField>