force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Mapped_Lookup__c.field-meta.xml
<CustomField>
    <fullName>refedge__Mapped_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapped Lookup</label>
    <type>Checkbox</type>
</CustomField>