force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__No_Change__c.field-meta.xml
<CustomField>
    <fullName>refedge__No_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Change</label>
    <type>Checkbox</type>
</CustomField>