force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__No_change_value__c.field-meta.xml
<CustomField>
    <fullName>refedge__No_change_value__c</fullName>
    <label>No Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>