force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__No_Longer_a_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>refedge__No_Longer_a_Program_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer a Program Member</label>
    <type>Checkbox</type>
</CustomField>