force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Not_A_Program_Member_Reason__c.field-meta.xml
<CustomField>
    <fullName>refedge__Not_A_Program_Member_Reason__c</fullName>
    <label>Not A Program Member Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>