force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Reference_Refresh__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Refresh__c</fullName>
    <label>Profile Update</label>
    <referenceTo>refedge__Reference_Refresh__c</referenceTo>
    <relationshipLabel>Profile Update Details</relationshipLabel>
    <relationshipName>Reference_Refresh_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>