force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Referenceability_Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Referenceability_Status__c</fullName>
    <label>Referenceability Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>