force-app/main/default/objects/refedge__Reference_Refresh_Update__c/fields/refedge__Referenceability_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Referenceability_Verified_Date__c</fullName>
    <label>Referenceability Verified Date</label>
    <type>Date</type>
</CustomField>